--- a/numerical model.ipynb
+++ b/numerical model.ipynb
@@ -11,12 +11,7 @@
    },
    "source": [
     "\n",
-    "# MetPy Declarative Syntax Tutorial\n",
-    "\n",
-    "The declarative syntax that is a part of the MetPy packaged is designed to aid in simple\n",
-    "data exploration and analysis needs by simplifying the plotting context from typical verbose\n",
-    "Python code. The complexity of data wrangling and plotting are hidden behind the simplified\n",
-    "syntax to allow a lower barrier to investigating your data.\n"
+    "##使用Metpy繪製歷史（2015年至今）GFS圖"
    ]
   },
   {
@@ -33,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "editable": true,
