--- a/numerical model.ipynb
+++ b/numerical model.ipynb
@@ -11,19 +11,29 @@
    },
    "source": [
     "\n",
-    "##使用Metpy繪製歷史（2015年至今）GFS圖"
+    "##使用Metpy繪製近實時既GFS圖"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports\n",
+    "## Installation\n",
     "\n",
-    "You'll note that the number of imports is smaller due to using the declarative syntax.\n",
-    "There is no need to import Matplotlib or Cartopy to your code as all of that is done\n",
-    "behind the scenes.\n",
-    "\n"
+    "首先要install anaconda navigator\n",
+    "開啟Jupyter lab\n",
+    "之後響cmd 果度打conda install ......\n",
+    "以下requirement 是需要的:\n",
+    "matplotlib\n",
+    "numpy\n",
+    "pandas\n",
+    "pint\n",
+    "pooch\n",
+    "pyproj\n",
+    "scipy\n",
+    "traitlets\n",
+    "xarray\n",
+    "最重要係metpy"
    ]
   },
   {
@@ -42,6 +52,7 @@
    },
    "outputs": [],
    "source": [
+    "#import python package\n",
     "from datetime import datetime, timedelta\n",
     "\n",
     "import urllib.request\n",
@@ -72,18 +83,17 @@
     "tags": []
    },
    "source": [
-    "## Getting Data\n",
+    "## 取得GFS data\n",
     "\n",
-    "Depending on what kind of data you are wanting to plot you'll use either Xarray (for gridded\n",
-    "data), Pandas (for CSV data), or the MetPy METAR parser (for METAR data).\n",
-    "\n",
-    "We'll start this tutorial by reading in a gridded dataset using Xarray.\n",
+    "GFS既data store 係一個DATABASE度，https://thredds.ucar.edu/thredds/catalog/idd/forecastModels.html，而我地既目標係plot近實時既GFS圖，所以可以去呢個網\n",
+    "址度搵下->Quarter degree forecast->最新既grib2 file->openDAP 2->然後就會見到一大堆GFS Dataset variable 會用到。我地既目標就係用python plot 呢d \n",
+    "Dataset 既 variable。\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "editable": true,
@@ -97,25 +107,23 @@
    },
    "outputs": [],
    "source": [
-    "run_date = \"20240708\"\n",
-    "init = \"1800\"\n",
-    "url=f'https://tds.scigw.unidata.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p25deg/GFS_Global_0p25deg_{run_date}_{init}.grib2'\n",
+    "run_date = \"20250225\"#YYYYMMDD年月日\n",
+    "init = \"1800\"#時間,只可以0000,0600,1200或者1800\n",
+    "#url=f'https://tds.scigw.unidata.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p25deg/GFS_Global_0p25deg_{run_date}_{init}.grib2'#Dataset既網址優先度第2\n",
     "#GFS 0.25 resolution\n",
-    "#url = f\"http://thredds.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p25deg/GFS_Global_0p25deg_{run_date}_{init}.grib2\"\n",
+    "url = f\"http://thredds.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p25deg/GFS_Global_0p25deg_{run_date}_{init}.grib2\"#Dataset既網址優先度第1\n",
     "#GFS 1 resolution\n",
     "#url=f\"https://tds.scigw.unidata.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_onedegree_noaaport/GFS_Global_onedeg_noaaport_20240620_0600.grib2\"\n",
-    "#GFS AVN\n",
+    "#舊版GFS\n",
     "#url=f\"https://tds.scigw.unidata.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_onedeg/GFS_Global_onedeg_20240621_0000.grib2\"\n",
-    "#WW3\n",
+    "#WW3（Wave watch 3)\n",
     "#url=f\"https://tds.scigw.unidata.ucar.edu/thredds/dodsC/grib/NCEP/WW3/Global/WW3_Global_{run_date}_{init}.grib2\"\n",
-    "#ECMWF\n",
-    "#url=f'https://thredds.rda.ucar.edu/thredds/dodsC/files/g/ds113.1/ec.oper.fc.sfc/202406/ec.oper.fc.sfc.128_151_msl.regn1280sc.20240622.nc'\n",
-    "data = xr.open_dataset(url)"
+    "data = xr.open_dataset(url)#store 個dataset 做一個variable叫做data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -125,16 +133,16 @@
    },
    "outputs": [],
    "source": [
-    "ds = data.metpy.sel(lat=slice(36, 7), lon=slice(100, 140))"
+    "ds = data.metpy.sel(lat=slice(36, 7), lon=slice(100, 140))#選取要plot既範圍,呢個example既latitude係由北緯7-36N，東經100-140E"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = data.metpy.sel(lat=slice(30, 0), lon=slice(360-100, 360-40))"
+    "#ds = data.metpy.sel(lat=slice(30, 0), lon=slice(360-100, 360-40))#呢個係西半球既例子"
    ]
   },
   {
@@ -149,13 +157,12 @@
    "source": [
     "## Set Datetime\n",
     "\n",
-    "Set the date/time of that you desire to plot\n",
-    "\n"
+    "呢個係set個plot time\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "editable": true,
@@ -169,7 +176,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_time = datetime(2024,7,8,18)+timedelta(hours=384)"
+    "plot_time = datetime(2025,2,25,18)+timedelta(hours=384)"
    ]
   },
   {
