--- a/numerical model.ipynb
+++ b/numerical model.ipynb
@@ -85,9 +85,8 @@
    "source": [
     "## 取得GFS data\n",
     "\n",
-    "GFS既data store 係一個DATABASE度，https://thredds.ucar.edu/thredds/catalog/idd/forecastModels.html，而我地既目標係plot近實時既GFS圖，所以可以去呢個網\n",
-    "址度搵下->Quarter degree forecast->最新既grib2 file->openDAP 2->然後就會見到一大堆GFS Dataset variable 會用到。我地既目標就係用python plot 呢d \n",
-    "Dataset 既 variable。\n",
+    "GFS既data store 係一個DATABASE度，https://thredds.ucar.edu/thredds/catalog/idd/forecastModels.html\n",
+    "，而我地既目標係plot近實時既GFS圖，所以可以去呢個網址度搵下->Quarter degree forecast->最新既grib2 file->openDAP 2->然後就會見到一大堆GFS Dataset variable 會用到。我地既目標就係用python plot 呢d Dataset 既 variable。\n",
     "\n"
    ]
   },
