--- a/numerical model.ipynb
+++ b/numerical model.ipynb
@@ -511,7 +511,7 @@
     "panel.projection = 'mer'\n",
     "panel.layers = ['states', 'coastline', 'borders']\n",
     "panel.layers_edgecolor='white'\n",
-    "panel.title=f'GFS 0.25 resolution 10m wind speed with isobar at {plot_time} Z,{run_date}{init}Z run'\"\\n\"f' Minimum pressure:{float(np.min(ds.MSLP_Eta_model_reduction_msl[128]/100))}hPa'\"\\n\"f'Maximum 10m wind speed:{float(np.max(cfill.data.wind_speed[128]*3.6/1.852))}kts'\"\\n\"f'Maximum 100m wind speed:{float(np.max(cfill.data.wind_speed[128][6]*3.6/1.852))}kts'\"\\n\"f'Max surface wind gust:{float(np.max(ds.Wind_speed_gust_surface[128]*3.6/1.852))}kts'\"\\n\"f'cheung chau 10m wind:{float(cfill.data.wind_speed[128][0][31][56]*3.6/1.852)}kts'\n",
+    "panel.title=f'GFS 0.25 resolution 10m wind speed with isobar at {plot_time} Z,{run_date}{init}Z run'\"\\n\"f' Minimum pressure:{float(np.min(ds.MSLP_Eta_model_reduction_msl[128]/100))}hPa'\"\\n\"f'Maximum 10m wind speed:{float(np.max(cfill.data.wind_speed[128][0]*3.6/1.852))}kts'\"\\n\"f'Maximum 100m wind speed:{float(np.max(cfill.data.wind_speed[128][6]*3.6/1.852))}kts'\"\\n\"f'Max surface wind gust:{float(np.max(ds.Wind_speed_gust_surface[128]*3.6/1.852))}kts'\"\\n\"f'cheung chau 10m wind:{float(cfill.data.wind_speed[128][0][31][56]*3.6/1.852)}kts'\n",
     "panel.plots=[cfill,cntr2,barbs]"
    ]
   },
